--- a/Ödev1/about-us.html
+++ b/Ödev1/about-us.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ana Sayfa</title>
+    <title>Hakkımızda</title>
 </head>
 <body>
     <!-- Nav Bar - Start -->
@@ -24,14 +24,13 @@
     </header>
     <hr>
     <!-- Nav Bar - End -->
-
-    <!-- Content - Start  -->
+     <!-- Content - Start  -->
     <section>
         <!-- Articles - Start -->
          <article>
             
-            <h2>Birinci Yazı</h2>
-            <img src="https://picsum.photos/400" alt="Görsel1" style="border: 12;">
+            <h2>Hakkımızda</h2>
+            <img src="https://picsum.photos/560" alt="İlk resim">
             <p>Lorem ipsum dolor sit amet.</p>
             <p>Asperiores voluptates cumque voluptas distinctio.</p>
             <p>Quidem placeat nesciunt ducimus doloribus.</p>
@@ -42,37 +41,9 @@
             </ol>
             <hr>
          </article>
-         <article>
-            <h2>İkinci Yazı</h2>
-            <img src="https://picsum.photos/400" alt="Görsel2" style="border: 10;">
-            <p>Lorem ipsum dolor sit amet.</p>
-            <p>Maxime magnam iure cum saepe.</p>
-            <p>Blanditiis nesciunt hic rerum sunt.</p>
-            <ul>
-                <li>Lorem, ipsum dolor.</li>
-                <li>Repellat, repudiandae beatae?</li>
-                <li>Iure, saepe nostrum.</li>
-            </ul>
-            <hr>
-         </article>
-         <article>
-            <h2>Üçüncü Yazı</h2>
-            <img src="https://picsum.photos/400" alt="Görsel3">
-            <p>Lorem ipsum dolor sit amet.</p>
-            <p>Amet pariatur quas dolorem officiis!</p>
-            <p>Tenetur qui voluptas ad fuga!</p>
-             <ul>
-                <li>Lorem, ipsum dolor.</li>
-                <li>Repellat, repudiandae beatae?</li>
-                <li>Iure, saepe nostrum.</li>
-            </ul>
-            <hr>
-         </article>
-        <!-- Articles - End --> 
+         <!--Articles - End  -->
     </section>
-    <!-- Content - End  --> 
-
-    <!-- Footer - Start -->
+   <!-- Footer - Start -->
      <footer  style="background-color: aqua;" >
         <nav>
         <ul style="list-style-type: none;">
@@ -89,6 +60,5 @@
        </nav>
      </footer>
     <!-- Footer - End -->
- 
 </body>
 </html>
